responsive website complete done

--- a/style.css
+++ b/style.css
@@ -6,3 +6,59 @@
     font-size: 14px;
     color: rgb(209, 206, 206);
 }
+.package-hover{
+    transition: 1s;
+    overflow: hidden;
+    margin: 10px 0px;
+}
+.card{
+    border-radius: 20px;
+}
+.package-hover:hover{
+    transform: scale(1.05);
+    z-index: 10;
+}
+.card:hover{
+    background-color: rgb(178, 178, 247);
+    color: white;
+}
+.card:hover button{
+    background-color: white;
+    border: none;
+    color: black;
+}
+.card button{
+    background-color: rgb(248, 234, 212);
+    border: none;
+    color: blue;
+}
+.persons{
+    gap: 20px;
+}
+.asked-question{
+    gap: 20px;
+}
+.accordion-button{
+    outline: none !important;
+    box-shadow: none;
+    background-color: transparent !important;
+    color: black !important;
+}
+.accordion-item{
+    box-shadow: none;
+    color: #000;
+}
+.accordion-button:focus{
+    box-shadow: none;
+    border: none;
+    outline: none;
+    color: black;
+
+}
+.footer{
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
